force-app/main/default/objects/Lead/fields/DNA_Count__c.field-meta.xml
<CustomField>
    <fullName>DNA_Count__c</fullName>
    <label>DNA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>