force-app/main/default/objects/Lead/fields/Inhouse_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Inhouse_Created_By__c</fullName>
    <label>Platform Created By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Created_By1</valueSetName>
    </valueSet>
</CustomField>