force-app/main/default/objects/Lead/fields/Referral_Subject__c.field-meta.xml
<CustomField>
    <fullName>Referral_Subject__c</fullName>
    <label>Referral Subject</label>
    <type>TextArea</type>
</CustomField>