force-app/main/default/objects/Lead/fields/Reschedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Count__c</fullName>
    <label>Reschedule Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>